[package]
name = "png_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "png_embed"
path = "src/png_embed/main.rs"

[[bin]]
name = "png_data"
path = "src/png_data/main.rs"

[dependencies]
argon2 = "0.5.3"
bitvec = "1.0.1"
crc = "3.2.1"
entropy = "0.4.2"
getopts = "0.2.21"
png = "0.17.13"
rand = "0.8.5"
rand_chacha = "0.3.1"
